EXTRA_DIST = $(images_DATA)
imagesdir = $(pkgdatadir)/doc/images
images_DATA = \
clock-properties.png \
default_panel.png \
handle-popup.png \
item-popup.png \
launcher-properties.png \
mailcheck-properties.png \
menuitem-properties.png \
nooptions-properties.png \
panel-settings.png \
systembuttons-properties.png

