# $Id$

iconsdir = $(datadir)/icons/hicolor/48x48/apps

icons_DATA =								\
	xfce4-panel.png							\
	xfce4-iconbox.png						\
	xfce4-taskbar.png						\
	xfce4-clock.png							\
	xfce4-separator.png						\
	xfce4-systray.png						\
	xfce-mouse.png

EXTRA_DIST =								\
	$(icons_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
