iconsdir = $(datadir)/icons/hicolor/48x48/apps
icons_DATA = \
	org.xfce.panel.png \
	org.xfce.panel.actions.png \
	org.xfce.panel.applicationsmenu.png \
	org.xfce.panel.clock.png \
	org.xfce.panel.directorymenu.png \
	org.xfce.panel.launcher.png \
	org.xfce.panel.pager.png \
	org.xfce.panel.separator.png \
	org.xfce.panel.showdesktop.png \
	org.xfce.panel.systray.png \
	org.xfce.panel.tasklist.png \
	org.xfce.panel.windowmenu.png

EXTRA_DIST = \
	$(icons_DATA)
